# markdown-pdf-recursive

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
mprecursive/: __init__.py  banner.py  cli.py  obsidian.py  scanner.py  utils.py
mprecursive/converters/: __init__.py  html_pdf.py  markdown_pdf.py  pdf_markdown.py
tests/: test_cli.py  test_markdown_converter.py  test_obsidian.py  test_scanner.py
