[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-pdf-recursive"
version = "0.1.0"
description = "MPRecursive: recursively convert markdown documents into a single PDF"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "raymsm", email = "noreply@example.com"}
]
keywords = ["markdown", "pdf", "pandoc", "cli", "obsidian"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/raymsm/markdown-pdf-recursive"
Repository = "https://github.com/raymsm/markdown-pdf-recursive"

[project.scripts]
MPRecursive = "mprecursive.cli:main"

[tool.setuptools]
packages = ["mprecursive", "mprecursive.converters"]

[tool.pytest.ini_options]
testpaths = ["tests"]
